--- a/views/about.html
+++ b/views/about.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index Page</title>
+    <title>About Page</title>
   </head>
   <body>
-    <h1>Hello Index Page</h1>
-    <img src="./ftp1.PNG" alt="" />
+    <h1>Hello About Page</h1>
+    <img src="imgs/BM123.PNG" alt="" />
   </body>
 </html>
